white-space: nowrap; added to .btn class to stop line break

--- a/_buttons.scss
+++ b/_buttons.scss
@@ -6,6 +6,7 @@
   font-size: 16px;
   font-weight: 700;
   color: #fff;
+  white-space: nowrap;
 
   &:hover,
   &:focus {
